# fllume

./: .gitignore  .roomodes  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: Makefile  README.md  requirements.txt  website-plan.md
docs/source/: api.rst  conf.py  getting-started.rst  index.rst
docs/website/: index.html
docs/website/css/: styles.css
docs/website/js/: main.js
src/fllume/: __init__.py  agent.py
tests/: test_agent.py  test_builder.py  test_examples.py
